[gd_scene load_steps=36 format=2]

[ext_resource path="res://Levels/Level4.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://Items/Podium/Podium.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/level_120m.png" type="Texture" id=4]
[ext_resource path="res://assets/level_110m.png" type="Texture" id=5]
[ext_resource path="res://assets/level_100m.png" type="Texture" id=6]
[ext_resource path="res://assets/level_90m.png" type="Texture" id=7]
[ext_resource path="res://assets/level_80m.png" type="Texture" id=8]
[ext_resource path="res://assets/level_70m.png" type="Texture" id=9]
[ext_resource path="res://assets/level_60m.png" type="Texture" id=10]
[ext_resource path="res://assets/level_50m.png" type="Texture" id=11]
[ext_resource path="res://assets/level_40m.png" type="Texture" id=12]
[ext_resource path="res://assets/level_30m.png" type="Texture" id=13]
[ext_resource path="res://assets/level_20m.png" type="Texture" id=14]
[ext_resource path="res://assets/level_10m.png" type="Texture" id=15]
[ext_resource path="res://assets/level_0m.png" type="Texture" id=16]
[ext_resource path="res://assets/level_130m.png" type="Texture" id=17]
[ext_resource path="res://assets/level_140m.png" type="Texture" id=18]
[ext_resource path="res://assets/level_150m.png" type="Texture" id=19]
[ext_resource path="res://assets/level_160m.png" type="Texture" id=20]
[ext_resource path="res://assets/level_170m.png" type="Texture" id=21]
[ext_resource path="res://assets/level_180m.png" type="Texture" id=22]
[ext_resource path="res://assets/level_190m.png" type="Texture" id=23]
[ext_resource path="res://assets/level_200m.png" type="Texture" id=24]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/Stage2.ogg" type="AudioStream" id=26]
[ext_resource path="res://assets/sfx/TimeReduce.ogg" type="AudioStream" id=27]
[ext_resource path="res://assets/sfx/GameOver.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sfx/Clapping.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sfx/HurtBall.wav" type="AudioStream" id=30]
[ext_resource path="res://Items/CheckPoints.tscn" type="PackedScene" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5126.64, 0.107824 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 70.8109 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 120 )

[node name="Level4" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_top = 2.0
margin_right = 5198.0
margin_bottom = 226.0
rect_scale = Vector2( 1.95, 2.05 )
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="Podium" parent="." instance=ExtResource( 3 )]
position = Vector2( 10040, 378.21 )

[node name="LevelContainer" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="level_120m" type="Sprite" parent="LevelContainer"]
position = Vector2( 4060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="level_110m" type="Sprite" parent="LevelContainer"]
position = Vector2( 4560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="level_100m" type="Sprite" parent="LevelContainer"]
position = Vector2( 5060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="level_90m" type="Sprite" parent="LevelContainer"]
position = Vector2( 5560, 434.337 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="level_80m" type="Sprite" parent="LevelContainer"]
position = Vector2( 6060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="level_70m" type="Sprite" parent="LevelContainer"]
position = Vector2( 6560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="level_60m" type="Sprite" parent="LevelContainer"]
position = Vector2( 7060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="level_50m" type="Sprite" parent="LevelContainer"]
position = Vector2( 7560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="level_40m" type="Sprite" parent="LevelContainer"]
position = Vector2( 8060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="level_30m" type="Sprite" parent="LevelContainer"]
position = Vector2( 8560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="level_20m" type="Sprite" parent="LevelContainer"]
position = Vector2( 9060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="level_10m" type="Sprite" parent="LevelContainer"]
position = Vector2( 9560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="level_00m" type="Sprite" parent="LevelContainer"]
position = Vector2( 10060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="level_130m" type="Sprite" parent="LevelContainer"]
position = Vector2( 3560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="level_140m" type="Sprite" parent="LevelContainer"]
position = Vector2( 3060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="level_150m" type="Sprite" parent="LevelContainer"]
position = Vector2( 2560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="level_160m" type="Sprite" parent="LevelContainer"]
position = Vector2( 2060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 20 )

[node name="level_170m" type="Sprite" parent="LevelContainer"]
position = Vector2( 1560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 21 )

[node name="level_180m" type="Sprite" parent="LevelContainer"]
position = Vector2( 1060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )

[node name="level_190m" type="Sprite" parent="LevelContainer"]
position = Vector2( 560, 434.659 )
scale = Vector2( 2, 2 )
texture = ExtResource( 23 )

[node name="level_200m" type="Sprite" parent="LevelContainer"]
position = Vector2( 60, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 24 )

[node name="Floor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 5079.5, 414.334 )
scale = Vector2( 0.990652, 70.7378 )
shape = SubResource( 1 )

[node name="BallContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 25 )]
position = Vector2( 107, 340 )
scale = Vector2( 0.998518, 0.804541 )
speed = 110
jump_power = 450
gravity = 15
slow_backward = true
process_hurt = true
character_behaviour = "Stage 3:Balls"

[node name="Camera2D" parent="Player" index="2"]
position = Vector2( -140, 0 )
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 10135
limit_bottom = 460
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sounds" parent="Player" index="3"]
editor/display_folded = true

[node name="Walls" type="Node" parent="."]
editor/display_folded = true

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true
position = Vector2( 28, 142 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource( 2 )

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="LevelSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 26 )
autoplay = true

[node name="ReduceTimeSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 27 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 28 )

[node name="WinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 29 )

[node name="HurtSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 30 )

[node name="GoalSensor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3599.08, 296.524 )
scale = Vector2( 1, 2.36 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalSensor"]
scale = Vector2( 0.44, 4.6 )
shape = SubResource( 3 )

[node name="CheckPoints" parent="." instance=ExtResource( 31 )]

[node name="chkpt_90m" parent="CheckPoints" index="10"]
position = Vector2( 640, 340 )

[node name="CheckPoint70" type="Area2D" parent="CheckPoints/chkpt_90m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_90m/CheckPoint70"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_80m" parent="CheckPoints" index="11"]
position = Vector2( 1140, 340 )

[node name="CheckPoint60" type="Area2D" parent="CheckPoints/chkpt_80m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_80m/CheckPoint60"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_70m" parent="CheckPoints" index="12"]
position = Vector2( 1640, 340 )

[node name="CheckPoint50" type="Area2D" parent="CheckPoints/chkpt_70m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_70m/CheckPoint50"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_60m" parent="CheckPoints" index="13"]
position = Vector2( 2140, 340 )

[node name="CheckPoint40" type="Area2D" parent="CheckPoints/chkpt_60m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_60m/CheckPoint40"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_50m" parent="CheckPoints" index="14"]
position = Vector2( 2640, 340 )

[node name="CheckPoint30" type="Area2D" parent="CheckPoints/chkpt_50m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_50m/CheckPoint30"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_40m" parent="CheckPoints" index="15"]
position = Vector2( 3060, 340 )

[node name="CheckPoint20" type="Area2D" parent="CheckPoints/chkpt_40m" index="0"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/chkpt_40m/CheckPoint20"]
position = Vector2( 0, -75 )
shape = SubResource( 4 )

[node name="chkpt_30m" parent="CheckPoints" index="16"]
position = Vector2( 3640, 340 )

[node name="chkpt_20m" parent="CheckPoints" index="17"]
position = Vector2( 4140, 340 )
[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
[connection signal="jumped" from="Player" to="." method="_on_Player_jumped"]
[connection signal="lose" from="Player" to="." method="_on_Player_lose"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="stopped" from="Player" to="." method="_on_Player_stopped"]
[connection signal="win" from="Player" to="." method="_on_Player_win"]
[connection signal="finished" from="Sounds/GameOverSound" to="." method="_on_GameOverSound_finished"]
[connection signal="finished" from="Sounds/WinSound" to="." method="_on_WinSound_finished"]
[connection signal="body_entered" from="GoalSensor" to="." method="_on_GoalSensor_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_90m/CheckPoint70" to="." method="_on_CheckPoint70_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_80m/CheckPoint60" to="." method="_on_CheckPoint60_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_70m/CheckPoint50" to="." method="_on_CheckPoint50_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_60m/CheckPoint40" to="." method="_on_CheckPoint40_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_50m/CheckPoint30" to="." method="_on_CheckPoint30_body_entered"]
[connection signal="body_entered" from="CheckPoints/chkpt_40m/CheckPoint20" to="." method="_on_CheckPoint20_body_entered"]

[editable path="Player"]

[editable path="CheckPoints"]
